--- a/packages/gatsby-theme-core/package.json
+++ b/packages/gatsby-theme-core/package.json
@@ -24,27 +24,27 @@
     "directory": "packages/gatsby-theme-core"
   },
   "devDependencies": {
-    "gatsby": "^2.22.9",
+    "gatsby": "^2.24.51",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@mdx-js/mdx": "^1.6.4",
-    "@mdx-js/react": "^1.6.5",
+    "@emotion/core": "^10.0.35",
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
     "@reflexjs/components": "^0.3.0",
     "@reflexjs/gatsby-helpers": "^0.6.0",
     "@reflexjs/utils": "^0.2.1",
-    "@theme-ui/prism": "^0.4.0-rc.1",
+    "@theme-ui/prism": "^0.3.0",
     "copy-to-clipboard": "^3.3.1",
-    "gatsby-image": "^2.4.5",
-    "gatsby-plugin-catch-links": "^2.3.2",
-    "gatsby-plugin-mdx": "^1.2.15",
-    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-image": "^2.4.16",
+    "gatsby-plugin-catch-links": "^2.3.11",
+    "gatsby-plugin-mdx": "^1.2.36",
+    "gatsby-plugin-sharp": "^2.6.29",
     "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-remark": "^2.8.13",
-    "gatsby-transformer-sharp": "^2.5.3",
+    "gatsby-source-filesystem": "^2.3.26",
+    "gatsby-transformer-remark": "^2.8.30",
+    "gatsby-transformer-sharp": "^2.5.13",
     "github-slugger": "^1.3.0",
     "theme-ui": "^0.3.1"
   },
