--- a/site/package.json
+++ b/site/package.json
@@ -12,10 +12,45 @@
     "preview": "gatsby build && gatsby serve"
   },
   "dependencies": {
-    "@reflexjs/gatsby-theme-base": "^0.3.3",
-    "gatsby": "^2.22.11",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
+    "@reflexjs/gatsby-theme-base": "^0.3.7",
+    "acorn": "^8.0.1",
+    "gatsby": "^2.24.51",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "typeface-inter": "^3.12.0"
+    "react-error-overlay": "^6.0.7",
+    "theme-ui": "^0.3.1",
+    "typeface-inter": "^3.15.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/runtime": "^7.11.2",
+    "@testing-library/cypress": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
+    "axe-core": "^4.0.1",
+    "babel-eslint": "^10.1.0",
+    "cypress": "^5.0.0",
+    "cypress-axe": "^0.8.1",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-mdx": "^1.8.2",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.6",
+    "husky": "^4.2.5",
+    "jest": "^26.4.2",
+    "jest-emotion": "^10.0.32",
+    "lerna": "^3.22.1",
+    "microbundle": "^0.12.3",
+    "prettier": "^2.1.1",
+    "pretty-quick": "^3.0.0",
+    "react-test-renderer": "^16.13.1",
+    "start-server-and-test": "^1.11.3",
+    "typescript": "^4.0.2"
   }
 }
